User Input in line with Bullet Point

--- a/Comp Sci 2.0/Your To Do List/index.html
+++ b/Comp Sci 2.0/Your To Do List/index.html
@@ -6,21 +6,22 @@
     body {
         background-color: white;
         color: black;
-        text-align: center;
     }
 	
     h1 {
         color: red;
+        text-align: center;
     }
 	
 </style>
 </head>
 <body>
     <h1>Your To Do List</h1>
-    <input>
+    
     <ul>
-        <li></li>
+        <li><input></li>
     </ul>
+    
 <script src = "app4.js">
 
 </script>
