Three User Inputs

--- a/Comp Sci 2.0/Your To Do List/index.html
+++ b/Comp Sci 2.0/Your To Do List/index.html
@@ -20,6 +20,8 @@
     
     <ul>
         <li><input></li>
+        <li><input></li>
+        <li><input></li>
     </ul>
     
 <script src = "app4.js">
