Creating a save button

--- a/Comp Sci 2.0/Your To Do List/index.html
+++ b/Comp Sci 2.0/Your To Do List/index.html
@@ -24,6 +24,9 @@
         <li><input></li>
     </ul>
     
+<!--    Create save button (to save in the data)-->
+    <button>Save</button>
+    
 <script src = "app4.js">
 
 </script>
