Edited the comments and other stuff

--- a/Comp Sci 2.0/Your To Do List/index.html
+++ b/Comp Sci 2.0/Your To Do List/index.html
@@ -22,13 +22,13 @@
     <!--    Bullet Points-->
 
     <ul>
-        <li><input id="myInput" value=" "></li>
-        <li><input id="myInput" value=" "></li>
-        <li><input id="myInput" value=" "></li>
+        <li><input id="myInput"></li>
+        <li><input id="myInput"></li>
+        <li><input id="myInput"></li>
     </ul>
     
-<!--    Create save button (to save in the data)-->
-<!--    The properties & functions of the save button are in app4.js-->
+<!--    Save button saves the data-->
+    <!--    New Bullet Point button creates a new bullet point-->
 <button id = "myBtn" onclick = "javascript:alert('Are you sure you want to create a new bullet point?')">New Bullet Point</button>
 <button id = "saveButton">Save</button>    
 
