Changed the header font to Times New Roman

--- a/Comp Sci 2.0/Your To Do List/index.html
+++ b/Comp Sci 2.0/Your To Do List/index.html
@@ -13,6 +13,8 @@
     h1 {
         color: red;
         text-align: center;
+        font-family: "Times New Roma", Times, serif;
+        font-size: 30px;
     }
 	
 </style>
@@ -27,7 +29,7 @@
         <li><input id="myInput"></li>
     </ul>
     
-<!--    Save button saves the data-->
+    <!--    Save button saves the data-->
     <!--    New Bullet Point button creates a new bullet point-->
 <button id = "myBtn" onclick = "javascript:alert('Are you sure you want to create a new bullet point?')">New Bullet Point</button>
 <button id = "saveButton">Save</button>    
